fix hamburger color in the dark mode.

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,11 @@ table tr td {
   background-color: #4d4d4d !important;
 }
 
+.dark .navbar-inverse .navbar-toggle:focus, 
+.dark .navbar-inverse .navbar-toggle:hover {
+  background-color: #293443 !important;
+}
+
 .navbar-default .navbar-toggle {
   border-color: #A1887F;
 }
